--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -73,7 +73,7 @@
       right: 0;
       top: 100%;
       z-index: 1;
-      background: #421E2F;
+      background: #FFE4E1;
       width: 100%;
 			max-width: 320px;
 			border-radius: 0 0 0 12px;
@@ -88,7 +88,7 @@
       padding: 20px;
     }
     a:hover {
-      background-color: #29121D;
+      background-color: #fabfb9;
     }
   }
 }
