--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -17,7 +17,7 @@ $breakpoint-xl: 1200px;
   --home-link-hover-color:  var(--primary-color);
 
   --button-color: #e6e9ff;
-  --button-alternate-color: #8a98ff;
+  --button-alternate-color: #6675E3;
 
   --post-link-color: #0F070B;
 
